--- a/prmApp/src/assets/styles/theme_SmartPRM.css
+++ b/prmApp/src/assets/styles/theme_SmartPRM.css
@@ -461,18 +461,20 @@ pre {
 .container-lg,
 .container-xl {
   width: 100%;
-  padding-right: 12px;
-  padding-left: 12px;
-  margin-right: auto;
-  margin-left: auto;
+  padding-right: 0;
+  padding-left: 0;
+  display: inline-block;
+  /* margin-right: auto;
+  margin-left: auto; */
 }
 
 .container-fluid-navbar {
-    width: 100%;
-    padding-right: 12px;
+    width: auto;
     padding-left: 0;
-    margin-right: auto;
-    margin-left: auto;
+    margin-left: 0;
+    max-width: 13em;
+    display:inline-block;
+    vertical-align: top;
 }
 
 @media (min-width: 576px) {
@@ -512,13 +514,13 @@ pre {
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
 .col-xl-auto {
   position: relative;
-  width: 100%;
+  /* width: 100%; */
   padding-right: 12px;
   padding-left: 12px; }
 
 .col {
   flex-basis: 0;
-  flex-grow: 1;
+  flex-grow: 1; 
   max-width: 100%; }
 
 .row-cols-1 > * {
@@ -3083,7 +3085,7 @@ input[type="button"].btn-block {
 
 .nav-link {
   display: block;
-  padding: 0.75rem 1rem;
+  padding: 0.7rem 1rem;
   color: black;
 }
   .nav-link:hover, .nav-link:focus {
@@ -3154,6 +3156,7 @@ input[type="button"].btn-block {
 .navbar-padding-bottom {
     padding-bottom: 3rem;
 }
+
   .navbar .container,
   .navbar .container-fluid, .navbar .container-sm, .navbar .container-md, .navbar .container-lg, .navbar .container-xl {
     display: flex;
@@ -10813,7 +10816,7 @@ a:focus, button:focus {
   opacity: .2; }
 
 .header {
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
   padding-left: 20px;
   padding-right: 50px;
 }
