--- a/prmApp/src/assets/styles/theme_SmartPRM.css
+++ b/prmApp/src/assets/styles/theme_SmartPRM.css
@@ -57,8 +57,9 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 #userName {
     padding: 0px 10px;
-    border-left: 3px solid rgb(227, 235, 246);
-    line-height: 4rem;
+    border-left: 2px solid rgb(227, 235, 246);
+    line-height: 2.25rem;
+    font-size: 0.8875rem;
 }
 
 body {
@@ -468,6 +469,13 @@ pre {
   margin-left: auto; */
 }
 
+.container-fluid-header {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    display: inline-block;
+}
+
 .container-fluid-navbar {
     width: auto;
     padding-left: 0;
@@ -515,8 +523,8 @@ pre {
 .col-xl-auto {
   position: relative;
   /* width: 100%; */
-  padding-right: 12px;
-  padding-left: 12px; }
+  padding-right: 9px;
+  padding-left: 10px; }
 
 .col {
   flex-basis: 0;
@@ -2244,7 +2252,7 @@ fieldset:disabled a.btn {
     pointer-events: none; }
 
 .btn-lg, .btn-group-lg > .btn {
-  padding: 0.75rem 1.25rem;
+  padding: 0.45rem 1.25rem;
   font-size: 0.9375rem;
   line-height: 1.5;
   border-radius: 0.5rem; }
@@ -10584,8 +10592,8 @@ a:focus, button:focus {
 .avatar {
   position: relative;
   display: inline-block;
-  width: 3rem;
-  height: 3rem;
+  width: 2.75rem;
+  height: 2.75rem;
   font-size: 1rem;
 }
   .avatar:after {
@@ -10635,8 +10643,8 @@ a:focus, button:focus {
   background-color: #B1C2D9; }
 
 .avatar-xs {
-  width: 1.625rem;
-  height: 1.625rem;
+  width: 1.375rem;
+  height: 1.375rem;
   font-size: 0.54167rem;
 }
 
@@ -10690,7 +10698,7 @@ a:focus, button:focus {
   .avatar-group .avatar + .avatar {
     margin-left: -0.75rem; }
     .avatar-group .avatar-xs + .avatar-xs {
-        margin-left: 0rem;
+        margin-left: 0.4rem;
         /* margin-left: -0.40625rem; */
     }
   .avatar-group .avatar-sm + .avatar-sm {
@@ -10816,19 +10824,22 @@ a:focus, button:focus {
   opacity: .2; }
 
 .header {
-  /* margin-bottom: 0.5rem; */
-  padding-left: 20px;
-  padding-right: 50px;
+    /* margin-bottom: 0.5rem; */
+    padding-left: 20px;
+    padding-right: 30px;
+    background-color: #333939;
+    color: white;
 }
 
 .header-img-top {
   width: 100%;
   height: auto; }
 
+/*
 .header-body {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #E3EBF6; }
+} */
 
 .header.bg-dark .header-body,
 .header.bg-hero .header-body {
@@ -10844,7 +10855,9 @@ a:focus, button:focus {
   color: #95AAC9; }
 
 .header-title {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  font-size: 1rem;
+}
 
 .header-subtitle {
   margin-top: 0.375rem;
