updated header and table

--- a/prmApp/src/assets/styles/theme_SmartPRM.css
+++ b/prmApp/src/assets/styles/theme_SmartPRM.css
@@ -485,10 +485,33 @@ pre {
 }
 
 .container-table {
-    width: 85vw;
-    display: inline-block;
+    width: 100%;
+    display: inline-table;
     vertical-align: top;
     overflow: hidden;
+    position: absolute;
+}
+
+.container-filter {
+    width: calc(100% - 200px);
+    padding-right: 0;
+    padding-left: 0;
+    display: inline-block;
+    background-color: #e5e5e5;
+}
+
+.filter {
+    padding: 5px 0 5px 10px;
+    margin: 0.75rem 1rem 0.5rem 1rem;
+    border-radius: 15px 15px;
+    border-width: 1px;
+    justify-content: center;
+}
+
+.add-patient {
+    padding-right: 10px;
+    margin: 0.5rem 1rem;
+    border-radius: 15px 15px !important;
 }
 
 @media (min-width: 576px) {
@@ -1165,14 +1188,14 @@ pre {
     margin-left: 91.66667%; } }
 
 .table {
-  width: auto;
+  width: calc(100% - 200px);
   margin-bottom: 1.5rem;
   color: #12263F;
   overflow: hidden;
 }
   .table th,
   .table td {
-    padding: 1rem;
+    padding: 0.4rem;
     vertical-align: top;
     border-top: 1px solid #EDF2F9; }
   .table thead th {
@@ -2007,9 +2030,10 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.15rem rgba(207, 215, 225, 0.5); }
 
 .btn-dark {
-  color: #FFFFFF;
-  background-color: #12263F;
-  border-color: #12263F; }
+    color: #FFFFFF;
+    background-color: #333939;
+    border-color: #12263F;
+}
   .btn-dark:hover {
     color: #FFFFFF;
     background-color: #0a1421;
@@ -10608,9 +10632,18 @@ a:focus, button:focus {
 .avatar {
   position: relative;
   display: inline-block;
-  width: 3.75rem;
+  width: 3.25rem;
   height: 2.75rem;
   font-size: 1rem;
+}
+
+.avatar-logo {
+    position: relative;
+    display: inline-block;
+    width: 4rem;
+    height: 3rem;
+    font-size: 1rem;
+    margin-top: 5px;
 }
   .avatar:after {
     content: '';
