--- a/prmApp/src/assets/styles/theme_SmartPRM.css
+++ b/prmApp/src/assets/styles/theme_SmartPRM.css
@@ -487,7 +487,7 @@ pre {
 .container-table {
     width: calc(100% - 205px);
     height: auto;
-    display: inline-table;
+    display: inline;
     vertical-align: top;
     overflow: hidden;
     position: absolute;
