--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -5035,11 +5035,13 @@ input[type=submit].btn-block {
 	-ms-flex: 1 1 auto;
 	flex: 1 1 auto;
 	min-height: 1px;
-	padding: 1.25rem
+	/* padding: 1.25rem */
+    padding-right: 1.25rem;
 }
 
 .card-title {
-	margin-bottom: .75rem
+	/* margin-bottom: .75rem; */
+    padding: 0.75rem 0rem 0rem 1rem;
 }
 
 .card-subtitle {
