--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -580,6 +580,14 @@ pre code {
 	margin-left: auto
 }
 
+.inline-block{
+    display: inline-block !important;
+}
+
+.btn-margin-top {
+    margin-top: -10px;
+}
+
 @media (min-width:576px) {
 	.container {
 		max-width: 540px
@@ -5041,7 +5049,7 @@ input[type=submit].btn-block {
 
 .card-title {
 	/* margin-bottom: .75rem; */
-    padding: 0.75rem 0rem 0rem 1rem;
+    padding: 0.5rem 1rem 0rem 1rem;
 }
 
 .card-subtitle {
