adjusted button 'Add New'

--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -584,8 +584,9 @@ pre code {
     display: inline-block !important;
 }
 
-.btn-margin-top {
-    margin-top: -10px;
+.btn-float-right {
+    float: right !important;
+    margin-left: 36.375rem !important;
 }
 
 @media (min-width:576px) {
