--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -584,8 +584,9 @@ pre code {
     display: inline-block !important;
 }
 
-.btn-float-right {
+.btn-add-patient {
     float: right !important;
+    position: relative;
 }
 
 @media (min-width:576px) {
@@ -5047,8 +5048,8 @@ input[type=submit].btn-block {
 }
 
 .card-title {
-    /* margin-bottom: .75rem; */
-    padding: 0.5rem 1rem 0rem 1rem;
+    margin-bottom: .75rem; 
+    /* padding: 0.5rem 1rem 0rem 1rem; */
 }
 
 .card-subtitle {
