improvements to the login page design

--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -514,6 +514,11 @@ mark {
 	height: auto
 }
 
+.img-fluid-logo {
+    width: 550px;
+    height: auto;
+}
+
 .img-thumbnail {
 	padding: .25rem;
 	background-color: #fff;
