--- a/SmartPRM-ClinicModule/src/assets/css/light/style.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/light/style.scss
@@ -202,7 +202,7 @@ a:hover { text-decoration: none; color: #02818f; }
 .sign-in-detail { padding: 100px 100px 100px 0; height: 100vh; border-radius: 40px; }
 .sign-in-logo { display: inline-block; width: 100%; }
 .sign-in-logo img { height: 100px; }
-.sign-in-from { padding: 20px 60px; border-radius: 37px; position: absolute; top: 10%; bottom: 10%; left: 0; right: 0; background: #fff; }
+.sign-in-from { padding: 20px 60px; border-radius: 37px; position: absolute; top: 10%; left: 0; right: 0; background: #fff; }
 .sign-info { border-top: 1px solid #cdd1f3; margin-top: 30px; padding-top: 20px; }
 .iq-social-media { margin: 0; padding: 0; float: right; }
 .iq-social-media li { list-style: none; float: left; margin-right: 10px; }
