Fix signup page for mobile view

--- a/SmartPRM-ClinicModule/src/assets/css/rtl/light/style.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/rtl/light/style.scss
@@ -201,7 +201,7 @@ a:hover { text-decoration: none; color: #02818f; }
 .sign-in-page { height: 100%; }
 .sign-in-detail { padding: 100px; height: 100vh; border-radius: 40px; }
 .sign-in-logo { display: inline-block; width: 100%; }
-.sign-in-logo img { height: 100px; }
+// .sign-in-logo img { height: 100px; }
 .sign-in-from { padding: 20px 60px; border-radius: 37px; position: absolute; top: 10%; bottom: 10%; right: 0; left: 0; background: #fff; }
 .sign-info { border-top: 1px solid #cdd1f3; margin-top: 30px; padding-top: 20px; }
 .iq-social-media { margin: 0; padding: 0; float: left; }
