fix of "css- pagination - use black numbers and not blue"

--- a/SmartPRM-ClinicModule/src/assets/scss/style.scss
+++ b/SmartPRM-ClinicModule/src/assets/scss/style.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.page-link {
+  color: #000 !important;
+}
+
 [dir="rtl"]{
   @import "../css/rtl/bootstrap";
   @import "../css/rtl/light/typography";
