--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -1844,7 +1844,7 @@ pre code {
 
 .table td,
 .table th {
-	padding: .75rem;
+	padding: 0.55rem .75rem;
 	vertical-align: top;
 	border-top: 1px solid #dee2e6
 }
