--- a/SmartPRM-ClinicModule/src/assets/scss/app.scss
+++ b/SmartPRM-ClinicModule/src/assets/scss/app.scss
@@ -1,3 +1,4 @@
+@import './app-vars.scss';
 .app-border{
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
@@ -9,4 +10,8 @@
 
 .active-element{
     cursor: pointer;
+}
+
+.primary-color{
+    color: $primary !important;
 }
