--- a/SmartPRM-ClinicModule/src/assets/scss/app-vars.scss
+++ b/SmartPRM-ClinicModule/src/assets/scss/app-vars.scss
@@ -1,6 +1,6 @@
 // clolors
 $black: #000000;
-$gray-100: #f6f9fc !default;
+$gray-100: #f5f5f5 !default;
 $gray-200: #e9e9e9 !default;
 $gray-300: #e4e4e4 !default;
 $gray-400: #dadada !default;
@@ -13,3 +13,4 @@ $white: #ffffff;
 $primary: #089bab;
 $primary-10: #089bab1a;
 $primary-20: #089bab33;
+$primary-50: #089bab80;
