Update profile pic css

--- a/SmartPRM-ClinicModule/src/assets/css/light/style.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/light/style.scss
@@ -982,7 +982,7 @@ form.comment-text { position: relative; }
 /*---------------------------------------------------------------------
 Profile Edit 
 -----------------------------------------------------------------------*/
-.profile-pic { max-width: 100%; display: block; border-radius: 50%; -webkit-border-radius: 50%; }
+.profile-pic { max-width: 100%; border-radius: 50% !important; -webkit-border-radius: 50%; }
 .profile-img-edit { position: relative; display: inline-block; height: 150px; width: 150px; }
 .file-upload { display: none; }
 .p-image { position: absolute; top: auto; right: 8px; bottom: 10px; transition: all .3s cubic-bezier(.175, .885, .32, 1.275); background: #089bab; color: #fff; border-radius: 50%; height: 30px; width: 30px; line-height: 28px; text-align: center; font-size: 12px; cursor: pointer; }
