--- a/SmartPRM-ClinicModule/src/assets/scss/style.scss
+++ b/SmartPRM-ClinicModule/src/assets/scss/style.scss
@@ -38,6 +38,30 @@
   object-fit: cover;
 }
 
+body .wrapper .form-control-disabled{
+  &:disabled {
+    background-color: transparent !important;
+    border: none;
+    &>div {
+      background-color: transparent !important;
+      border: none;
+    }
+  }
+
+    input:disabled  {
+    background-color: transparent !important;
+    border:none;
+  }
+}
+
+body .wrapper .vs--disabled {
+  &>div {
+    display: none;
+    background-color: transparent !important;
+    border:none;
+  }
+}
+
 [dir="rtl"]{
   @import "../css/rtl/bootstrap";
   @import "../css/rtl/light/typography";
