updated assignments tables

--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -620,6 +620,10 @@ pre code {
     display: inline-block;
 }
 
+.assignments-container .assignments-description {
+	width: 500px;
+}
+
 @media (min-width:576px) {
 	.container {
 		max-width: 540px
