--- a/SmartPRM-ClinicModule/src/assets/scss/style.scss
+++ b/SmartPRM-ClinicModule/src/assets/scss/style.scss
@@ -67,6 +67,19 @@ body .wrapper .vs--disabled {
   }
 }
 
+.custom-radio-st {
+  .custom-control {
+    &-label {
+      &:before {
+        top: 50%;
+      }
+      &:after {
+        top:50%
+      }
+    }
+  }
+}
+
 [dir="rtl"]{
   @import "../css/rtl/bootstrap";
   @import "../css/rtl/light/typography";
