--- a/SmartPRM-ClinicModule/src/assets/css/rtl/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/rtl/bootstrap.scss
@@ -8376,8 +8376,16 @@ button.bg-dark:hover {
   width: 25%!important
 }
 
+.w-40 {
+  width: 40%!important
+}
+
 .w-50 {
   width: 50%!important
+}
+
+.w-60 {
+  width:60%!important
 }
 
 .w-75 {
