--- a/SmartPRM-ClinicModule/src/assets/css/navbar-responsive.css
+++ b/SmartPRM-ClinicModule/src/assets/css/navbar-responsive.css
@@ -18,7 +18,7 @@
       /*position: absolute;*/
     }
     .iq-menu-bt {
-      right: 200px !important;
+      /*right: 200px !important;*/
     }
 }
   
@@ -30,7 +30,7 @@
       /*position: absolute;*/
     }
     .iq-menu-bt {
-      right: 200px !important;
+      /*right: 200px !important;*/
     }
 }
   
@@ -41,7 +41,7 @@
       /*width: 415px;*/
     }
     .iq-menu-bt {
-      right: 200px !important;
+      /*right: 200px !important;*/
     }
 }
 @media (min-width: 621px) and (max-width: 700px) {
@@ -51,7 +51,7 @@
       /*width: 520px;*/
     }
     .iq-menu-bt {
-      right: 200px !important;
+      /*right: 200px !important;*/
     }
 }
   
@@ -62,7 +62,7 @@
       /*width: 600px;*/
     }
     .iq-menu-bt {
-      right: 190px !important;
+      /*right: 190px !important;*/
     }
 }
   
@@ -73,7 +73,7 @@
       /*width: 640px;*/
     }
     .iq-menu-bt {
-      right: 180px !important;
+      /*right: 180px !important;*/
     }
 }
   
@@ -84,7 +84,7 @@
       /*width: 690px;*/
     }
     .iq-menu-bt {
-      right: 180px !important;
+      /*right: 180px !important;*/
     }
 }
   
@@ -93,7 +93,7 @@
       float: right;
     }
     .iq-menu-bt {
-      right: 387px !important;
+      /*right: 387px !important;*/
     }
 }
 
