--- a/SmartPRM-ClinicModule/src/assets/scss/style.scss
+++ b/SmartPRM-ClinicModule/src/assets/scss/style.scss
@@ -20,7 +20,7 @@
   min-height: 863.135px!important;
 }
 .fc-widget-content{
-  min-height: 143px!important;
+  //min-height: 143px!important;
 }
 
 .iq-global-search>ul>li a, .slick-arrow, .breadcrumb-item>a{
