upd calendar select doctors

--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -2773,8 +2773,8 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled):active,
 .show>.btn-primary.dropdown-toggle {
 	color: #fff;
-	background: #007bff;
-	border-color: #007bff;
+	background: #089bab;
+	border-color: #089bab;
 }
 
 .btn-primary:not(:disabled):not(.disabled).active:focus,
