--- a/SmartPRM-ClinicModule/src/assets/css/rtl/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/rtl/bootstrap.scss
@@ -2729,8 +2729,8 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled):active,
 .show>.btn-primary.dropdown-toggle {
   color: #fff;
-  background: #007bff;
-  border-color: #007bff;
+  background: #089bab;
+  border-color: #089bab;
 }
 
 .btn-primary:not(:disabled):not(.disabled).active:focus,
