adjusted default size

--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -70,7 +70,8 @@ body {
 	line-height: 1.5;
 	color: #212529;
 	text-align: left;
-	background-color: #fff
+	background-color: #fff;
+    zoom: 90%;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
