--- a/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/bootstrap.scss
@@ -65,13 +65,12 @@ section {
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	font-size: 1rem;
+	font-size: 0.775rem !important;
 	font-weight: 400;
 	line-height: 1.5;
 	color: #212529;
 	text-align: left;
 	background-color: #fff;
-    zoom: 90%;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
