design adjustments for mobile view

--- a/SmartPRM-ClinicModule/src/assets/css/navbar-responsive.css
+++ b/SmartPRM-ClinicModule/src/assets/css/navbar-responsive.css
@@ -102,7 +102,8 @@
         font-size: 13px;
     }
     .navbar {
-        justify-content: flex-end !important;
+       /* justify-content: flex-end !important; */
+       margin-left: .25rem;
     }
      .navbar .nav-responsive {
         order: 2;
