improvements to calendar

--- a/SmartPRM-ClinicModule/src/assets/css/light/typography.scss
+++ b/SmartPRM-ClinicModule/src/assets/css/light/typography.scss
@@ -274,7 +274,7 @@ Card
 .iq-card { background: #ffffff; -webkit-border-radius: 25px; -moz-border-radius: 25px; border-radius: 25px; margin-bottom: 15px; border: none; -webkit-box-shadow: 0px 4px 5px 1px rgba(175, 175, 175, 0.1); box-shadow: 0px 4px 5px 1px rgba(175, 175, 175, 0.1); }
 .iq-card .iq-card { box-shadow: none; }
 .iq-card .iq-card .iq-card-header { border: none; }
-.iq-card-body { padding: 20px; }
+.iq-card-body { padding: 12.5px 20px; }
 .iq-card .iq-card-header { padding: 0 20px; min-height: 60px; -ms-flex-align: center !important; align-items: center !important; border-bottom: 1px solid #eeeeee; border-radius: 25px 25px 0 0; -webkit-border-radius: 25px 25px 0 0; }
 .iq-card .iq-card-header .iq-header-title { display: inline-block; align-self: center !important; width: 100%; }
 .iq-card .iq-card-header .iq-header-title .card-title { margin-bottom: 0; }
