--- a/SmartPRM-ClinicModule/src/assets/scss/app.scss
+++ b/SmartPRM-ClinicModule/src/assets/scss/app.scss
@@ -15,3 +15,12 @@
 .primary-color{
     color: $primary !important;
 }
+
+@media (max-width: 479px) {
+[dir=ltr] body {
+    font-size: 14px !important;
+}
+[dir=ltr] .btn {
+    font-size: 14px !important;
+}
+}
